# ai-cost-lens

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
ai_cost_lens/: cli.py
ai_cost_lens/providers/: __init__.py  detector.py
examples/: README.md  anthropic-sample.csv  bedrock-sample.csv  openai-sample.csv
tests/: test_cli.py  test_providers.py
